--- a/angular.json
+++ b/angular.json
@@ -37,10 +37,8 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            },
+            "prerender": false,
+            "ssr": false,
             "fileReplacements": [
               {
                 "replace": "src/environments/environment.ts",
